# datarun-lmis

./: .gitattributes  .gitignore  README.md  datarun.code-workspace
backend/: .gitignore  README.md  alembic.ini  debug.py  main.py  pyproject.toml  requirements.txt  test_out.txt  test_output.txt
backend/alembic/: env.py
backend/alembic/versions/: 1c6b0c0f41f6_initial_baseline_migration.py  20853e295cf6_add_missing_inbox_columns.py  24c811d21401_partition_adapter_logs.py  2b989713eb9e_add_processing_to_inbox_status.py  4b8d4b3d707c_add_adapterinbox_tracking_and_.py  77bdfdeb57f8_init.py  ad545822c140_consolidate_dlq_into_inbox.py
backend/app/: main.py
backend/app/adapter/: worker.py
backend/app/composition/: __init__.py  service.py
backend/app/core/: api.py  security.py
backend/core/: config.py  database.py  logger.py
backend/scripts/: check_http.py  check_inbox.py  check_ledger.py  replay_events.py  seed_staging.py
backend/scripts/simulation/: firehose_adapter.py  reset_db.py  seed_topology.py
backend/tests/: conftest.py
backend/tests/adapter/: test_layer2_mapping.py  test_layer3_egress.py  test_mapper.py  test_models.py  test_worker.py
backend/tests/api/: test_admin_routers.py  test_api_idempotency.py  test_auth_api.py  test_e2e_ledger_lifecycle.py  test_e2e_reversal_rollback.py  test_global_exception_handler.py  test_kernel_routers.py  test_routers.py
backend/tests/composition/: test_bff.py
backend/tests/kernel/: test_shared_kernel.py
backend/tests/ledger/: test_event_store.py  test_gatekeeper.py  test_idempotency.py  test_in_transit.py  (+1 more)
(+184 files in other folders)
