[project]
name = "datarun-lmis-backend"
version = "0.1.0"
requires-python = ">=3.12"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "alembic",
]

# More permissive for the "hacking" phase
line-length = 120

[tool.ruff.lint]
# Enable pycodestyle (E) and Pyflakes (F) codes by default.
select = ["E", "F", "B", "I"]
ignore = [
    "E741", # Ambiguous variable names
    "E501", # Line too long
    "E402", # Module import not at top of file
    "E711", # None comparison (x == None)
    "E701", # Multiple statements on one line
    "B011", # Do not use `assert False`
    "B904", # Within an `except` clause, raise from error
    "B008", # Do not perform function calls in argument defaults (standard for FastAPI Depends)
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["app", "core"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity of 10.
max-complexity = 10
